Content wrap padding fixed

--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@
 }
 @media (min-width: 801px) {
   .contWrap {
-    padding-top: 54px;
+    padding: 54px 10px 10px 54px;
   }
   .home-sub-nav {
     display: block;
