--- a/src/lg.styl
+++ b/src/lg.styl
@@ -1,6 +1,7 @@
 @media(min-width: 801px)
   .contWrap
-    padding-top 54px
+    // padding-top 54px
+    padding 54px 10px 10px 54px
   .home-sub-nav
     display block
     position fixed
